test/invalid/idl/exposed.webidl
interface UnexposedInterface {};
partial interface UnexposedInterface {};
[LegacyNoInterfaceObject]
interface IntentionallyUnexposedInterface {};
namespace UnexposedNamespace {};
partial namespace UnexposedNamespace {};
